deployments/parser/parser-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parser-deployment
  labels:
    app: parser
spec:
  replicas: 4
  selector:
    matchLabels:
      app: parser
  template:
    metadata:
      labels:
        app: parser
    spec:
      containers:
        - name: parser
          image: mlodyajdza/parser:latest
          ports:
          - containerPort: 8095
            protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: parser
spec:
  selector:
    app: parser
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8095
  type: LoadBalancer

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parser-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx2
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: parser
            port:
              number: 8095
